--- a/tests/core/transmission/trans_channel/auth_channel/BUILD.gn
+++ b/tests/core/transmission/trans_channel/auth_channel/BUILD.gn
@@ -16,7 +16,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 module_output_path = "dsoftbus/transmission"
 
-ohos_unittest("TransAuthChannelCoreTest") {
+ohos_unittest("TransAuthChannelTest") {
   module_out_path = module_output_path
   sources = [ "trans_auth_channel_test.cpp" ]
 
@@ -126,7 +126,7 @@ ohos_unittest("TransAuthManagerTest") {
 group("unittest") {
   testonly = true
   deps = [
-    ":TransAuthChannelCoreTest",
+    ":TransAuthChannelTest",
     ":TransAuthManagerTest",
   ]
 }
