--- a/tests/sdk/transmission/trans_channel/permission/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/permission/BUILD.gn
@@ -18,7 +18,7 @@ if (defined(ohos_lite)) {
   import("//build/test.gni")
 
   module_output_path = "dsoftbus/transmission"
-  ohos_unittest("DynamicPermissionTest") {
+  ohos_unittest("TransDynamicPermissionTest") {
     module_out_path = module_output_path
     sources = [ "trans_dynamic_permission_test.cpp" ]
     include_dirs = [
