--- a/tests/sdk/transmission/session/BUILD.gn
+++ b/tests/sdk/transmission/session/BUILD.gn
@@ -171,6 +171,7 @@ ohos_unittest("TransClientSessionTest") {
     "$dsoftbus_root_path/sdk/transmission/ipc/include",
     "$dsoftbus_root_path/tests/sdk/common/include",
     "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/sdk/bus_center/manager/include",
   ]
 
   deps = [
