--- a/tests/sdk/bus_center/unittest/BUILD.gn
+++ b/tests/sdk/bus_center/unittest/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -13,10 +13,8 @@
 
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
-bus_center_sdk_test_src = [
-  "bus_center_sdk_test.cpp",
-  "client_bus_center_test.cpp",
-]
+bus_center_sdk_test_src = [ "bus_center_sdk_test.cpp" ]
+client_bus_center_test_src = [ "client_bus_center_test.cpp" ]
 softbus_center_sdk_test_src = [ "softbus_center_sdk_test.cpp" ]
 bus_center_sdk_test_inc = [
   "$dsoftbus_root_path/adapter/default_config/spec_config",
@@ -57,11 +55,11 @@ bus_center_sdk_test_deps = [
 ]
 
 if (dsoftbus_feature_lnn_meta_node) {
-  bus_center_sdk_test_src += [ "bus_center_meta_node_sdk_test.cpp" ]
+  bus_center_meta_node_sdk_test_src = [ "bus_center_meta_node_sdk_test.cpp" ]
 }
 
 if (dsoftbus_feature_lnn_heartbeat) {
-  bus_center_sdk_test_src += [ "bus_center_heartbeat_sdk_test.cpp" ]
+  bus_center_heartbeat_sdk_test_src = [ "bus_center_heartbeat_sdk_test.cpp" ]
   bus_center_sdk_test_inc += [
     "$dsoftbus_root_path/core/bus_center/interface",
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/include",
@@ -123,7 +121,7 @@ if (defined(ohos_lite)) {
     }
   }
 
-  ohos_unittest("SoftbusCenterSdkTest") {
+  ohos_unittest("SetDataChangeTest") {
     module_out_path = module_output_path
     sources = softbus_center_sdk_test_src
     include_dirs = bus_center_sdk_test_inc
@@ -148,11 +146,93 @@ if (defined(ohos_lite)) {
       ]
     }
   }
+
+  ohos_unittest("ClientBusMangerTest") {
+    module_out_path = module_output_path
+    sources = client_bus_center_test_src
+    include_dirs = bus_center_sdk_test_inc
+    include_dirs += [
+      "unittest/common/",
+      "//commonlibrary/c_utils/base/include",
+    ]
+    deps = bus_center_sdk_test_deps
+    deps += [
+      "$dsoftbus_root_path/tests/sdk/common:softbus_access_token_test",
+      "//third_party/googletest:gtest_main",
+    ]
+    if (is_standard_system) {
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
+    } else {
+      external_deps = [
+        "c_utils:utils",
+        "hilog:libhilog",
+      ]
+    }
+  }
+
+  ohos_unittest("BusCenterHeartbeatSdkTest") {
+    module_out_path = module_output_path
+    sources = bus_center_heartbeat_sdk_test_src
+    include_dirs = bus_center_sdk_test_inc
+    include_dirs += [
+      "unittest/common/",
+      "//commonlibrary/c_utils/base/include",
+    ]
+    deps = bus_center_sdk_test_deps
+    deps += [
+      "$dsoftbus_root_path/tests/sdk/common:softbus_access_token_test",
+      "//third_party/googletest:gtest_main",
+    ]
+    if (is_standard_system) {
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
+    } else {
+      external_deps = [
+        "c_utils:utils",
+        "hilog:libhilog",
+      ]
+    }
+  }
+
+  ohos_unittest("BusCenterMetaNodeSdkTest") {
+    module_out_path = module_output_path
+    sources = bus_center_meta_node_sdk_test_src
+    include_dirs = bus_center_sdk_test_inc
+    include_dirs += [
+      "unittest/common/",
+      "//commonlibrary/c_utils/base/include",
+    ]
+    deps = bus_center_sdk_test_deps
+    deps += [
+      "$dsoftbus_root_path/tests/sdk/common:softbus_access_token_test",
+      "//third_party/googletest:gtest_main",
+    ]
+    if (is_standard_system) {
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
+    } else {
+      external_deps = [
+        "c_utils:utils",
+        "hilog:libhilog",
+      ]
+    }
+  }
+
   group("unittest") {
     testonly = true
     deps = [
+      ":BusCenterHeartbeatSdkTest",
+      ":BusCenterMetaNodeSdkTest",
       ":BusCenterSdkTest",
-      ":SoftbusCenterSdkTest",
+      ":ClientBusMangerTest",
+      ":SetDataChangeTest",
     ]
   }
 }
