修改测试套名称，和BUILD.gn中编译目标名称保持一致
Signed-off-by: cuiqiao <cuiqiao@huawei.com>

--- a/tests/core/connection/ble/BUILD.gn
+++ b/tests/core/connection/ble/BUILD.gn
@@ -16,7 +16,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 module_output_path = "dsoftbus/connection"
 
-ohos_unittest("softbus_conn_ble_test") {
+ohos_unittest("ConnectionBleTest") {
   module_out_path = module_output_path
   include_dirs = [
     "$dsoftbus_root_path/interfaces/kits/common",
