--- a/tests/core/connection/p2p/BUILD.gn
+++ b/tests/core/connection/p2p/BUILD.gn
@@ -16,7 +16,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 module_output_path = "dsoftbus/connection"
 
-ohos_unittest("softbus_connection_p2p_test") {
+ohos_unittest("ConnectionP2PFuncTest") {
   module_out_path = module_output_path
 
   if (dsoftbus_feature_conn_br == true) {
