--- a/tests/core/connection/br/BUILD.gn
+++ b/tests/core/connection/br/BUILD.gn
@@ -40,7 +40,7 @@ config("softbus_connection_br_test_config") {
   ]
 }
 
-ohos_unittest("softbus_conn_br_test") {
+ohos_unittest("ConnectionBrTest") {
   module_out_path = module_output_path
   public_configs = [ ":softbus_connection_br_test_config" ]
   deps = [
@@ -59,7 +59,7 @@ ohos_unittest("softbus_conn_br_test") {
   sources = [ "connection_br_test.cpp" ]
 }
 
-ohos_unittest("softbus_conn_br_manager_test") {
+ohos_unittest("ConnectionBrManagerTest") {
   module_out_path = module_output_path
   public_configs = [ ":softbus_connection_br_test_config" ]
   deps = [
