--- a/tests/core/connection/common/unittest/BUILD.gn
+++ b/tests/core/connection/common/unittest/BUILD.gn
@@ -16,7 +16,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 module_output_path = "dsoftbus/connection"
 
-ohos_unittest("softbus_conn_common_test") {
+ohos_unittest("SoftbusCommonTest") {
   module_out_path = module_output_path
 
   #ldflags = [ "-lstdc++" ]
