--- a/tests/core/common/BUILD.gn
+++ b/tests/core/common/BUILD.gn
@@ -21,6 +21,7 @@ group("unittest") {
     "dfx/hidumper_adapter/unittest:unittest",
     "dfx/hisysevent_adapter/unittest:unittest",
     "log:unittest",
+    "security/permission/common:unittest",
     "sequence_verification:unittest",
     "utils:unittest",
   ]
