IssueNo:#I65M0O Description:Change the dependency on cjson_static to cjson in standard system. Sig:SIG_ApplicationFramework Feature or BugFix: Feature Binary Source: No
Signed-off-by: zhangyafei.echo <zhangyafei12@huawei.com>
Change-Id: I0a3686ab186b725f11c592ec6437bd0753351be7

--- a/components/nstackx/nstackx_ctrl/BUILD.gn
+++ b/components/nstackx/nstackx_ctrl/BUILD.gn
@@ -188,7 +188,7 @@ if (defined(ohos_lite)) {
     deps = [
       "../nstackx_util:nstackx_util.open",
       "//third_party/bounds_checking_function:libsec_static",
-      "//third_party/cJSON:cjson_static",
+      "//third_party/cJSON:cjson",
       "//third_party/libcoap:libcoap",
     ]
     subsystem_name = "communication"
