--- a/core/common/security/permission/permission.gni
+++ b/core/common/security/permission/permission.gni
@@ -45,6 +45,6 @@ if (defined(ohos_lite)) {
     "$dsoftbus_core_path/common/security/permission/$os_type/permission_utils.cpp",
     "$dsoftbus_core_path/common/security/permission/$os_type/softbus_permission.cpp",
   ]
-  softbus_permission_deps = [ "//third_party/cJSON:cjson_static" ]
+  softbus_permission_deps = [ "//third_party/cJSON:cjson" ]
   softbus_permission_external_deps += [ "c_utils:utils" ]
 }
