--- a/tests/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/raw_stream_data_test/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/raw_stream_data_test/BUILD.gn
@@ -41,6 +41,7 @@ ohos_unittest("RawStreamDataTest") {
     "$dsoftbus_root_path/sdk:softbus_client",
     "$dsoftbus_root_path/tests/sdk/common:softbus_access_token_test",
     "//third_party/bounds_checking_function:libsec_shared",
+    "//third_party/googletest:gmock",
     "//third_party/googletest:gtest",
     "//third_party/googletest:gtest_main",
   ]
