add heartbeat UT
Signed-off-by: liangqi <liangqi22@huawei.com>

--- a/tests/core/authentication/BUILD.gn
+++ b/tests/core/authentication/BUILD.gn
@@ -107,6 +107,8 @@ ohos_unittest("AuthTestMock") {
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/core/common/message_handler/include",
     "$dsoftbus_root_path/core/connection/interface",
+    "$dsoftbus_root_path/core/connection/p2p/interface",
+    "$dsoftbus_root_path/core/connection/p2p/common/include",
     "$dsoftbus_root_path/core/frame/$os_type/init/include",
     "$dsoftbus_root_path/core/frame/common/include",
     "$dsoftbus_root_path/core/discovery/manager/include",
@@ -187,6 +189,8 @@ ohos_unittest("AuthTestCallBack") {
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/core/common/message_handler/include",
     "$dsoftbus_root_path/core/connection/interface",
+    "$dsoftbus_root_path/core/connection/p2p/interface",
+    "$dsoftbus_root_path/core/connection/p2p/common/include",
     "$dsoftbus_root_path/core/frame/$os_type/init/include",
     "$dsoftbus_root_path/core/frame/common/include",
     "$dsoftbus_root_path/core/discovery/manager/include",
