Add sdk client bus_center manager ut and bus_center utils ut tests
Signed-off-by: y30033032 <yuanmeng36@huawei.com>

--- a/tests/core/bus_center/BUILD.gn
+++ b/tests/core/bus_center/BUILD.gn
@@ -16,5 +16,8 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 group("unittest") {
   testonly = true
-  deps = [ "lnn:unittest" ]
+  deps = [
+    "lnn:unittest",
+    "utils:unittest",
+  ]
 }
