fix:gn word spelling mistake
Signed-off-by: wangjingen <wangjingen1@huawei.com>

--- a/tests/core/discovery/BUILD.gn
+++ b/tests/core/discovery/BUILD.gn
@@ -50,6 +50,6 @@ group("fuzztest") {
   deps = []
   if (has_enhance_test) {
     deps +=
-        [ "$dsoftbus_root_path/dsoftbus_enhance/test/core/discovery:fuzzttest" ]
+        [ "$dsoftbus_root_path/dsoftbus_enhance/test/core/discovery:fuzztest" ]
   }
 }
